updated for home page to be newsfeed

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,9 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+  <header>
+    <h2>Welcome to TravelBook</h2>
+  </header>
 
   <p class="notice"><%= notice %></p>
   <p class="alert"><%= alert %></p>
