--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -28,6 +28,51 @@
   text-decoration: underline;
 }
 header{
+  position: fixed;
+  top:0;
+  left:0;
+  width: 100%;
+  z-index: 1;
   background-color: #009999;
   margin:0;
+  box-shadow: 0px 2px 5px #888888;
+}
+#header-content{
+  max-width: 800px;
+  margin: auto;
+  right: 0;
+  left: 0;
+  padding-right: 5px;
+  padding-left: 5px;
+}
+#header-name{
+  display: inline;
+  float: left;
+}
+#header-links{
+  display: inline;
+  float: right;
+  padding-top: 5px;
+}
+#header-links a{
+  color: black;
+}
+
+#news-wrapper{
+  padding-top: 40px;
+  max-width: 800px;
+  margin: auto;
+  right: 0;
+  left: 0;
+  padding-right: 5px;
+  padding-left: 5px;
+}
+#profiles-wrapper{
+  padding-top: 40px;
+  max-width: 800px;
+  margin: auto;
+  right: 0;
+  left: 0;
+  padding-right: 5px;
+  padding-left: 5px;
 }
