--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -76,3 +76,12 @@ header{
   padding-right: 5px;
   padding-left: 5px;
 }
+#login-wrapper{
+  padding-top: 40px;
+  max-width: 800px;
+  margin: auto;
+  right: 0;
+  left: 0;
+  padding-right: 5px;
+  padding-left: 5px;
+}
