--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
     <!--/////////// Header //////////-->
     <header>
       <div id="header-content">
-        <div id="header-name"><h2>TravelBook</h2></div><div id="header-links"><h4><% if user_signed_in? %><%= link_to "Profile", profile_path(current_user) %> | <%= link_to "Log Out", destroy_user_session_path, :method => :delete %><% end %></h4></div>
+        <div id="header-name"><h2>TravelBook</h2></div><div id="header-links"><h4> <%= link_to "Home", root_path %> | <% if user_signed_in? %><%= link_to "Profile", profile_path(current_user) %> | <%= link_to "Log Out", destroy_user_session_path, :method => :delete %><% end %></h4></div>
       </div>
     </header>
     <!--/////////// Ends Header //////////-->
